make changes to the ingredients

--- a/chicken.html
+++ b/chicken.html
@@ -12,12 +12,19 @@
     <p>Every home cook needs a good chicken pot pie recipe in their repertoire. On the hunt for a new family favorite? You're in luck! This homemade chicken pot pie definitely deserves a permanent spot in your recipe box.</p>
     <h2>Chicken Pot Pie Ingredients</h2>
     <ul>
-        <li>Chicken</li>
-        <li>Vegetables</li>
-        <li>Butter and Flour</li>
-        <li>Seasonings</li>
-        <li>Broth and Milk</li>
-        <li>Pie Crusts</li>
+        <li>1 pound skinless, boneless chicken breast halves - cubed</li>
+        <li>1 cup sliced carrots</li>
+        <li>1 cup frozen green peas</li>
+        <li>½ cup sliced celery</li>
+        <li>⅓ cup butter</li>
+        <li>⅓ cup chopped onion</li>
+        <li>⅓ cup all-purpose flour</li>
+        <li>½ teaspoon salt</li>
+        <li>¼ teaspoon black pepper</li>
+        <li>¼ teaspoon celery seed</li>
+        <li>1 ¾ cups chicken broth</li>
+        <li>⅔ cup milk</li>
+        <li>2 (9 inch) unbaked pie crusts</li>
     </ul>
 
     <h2>Steps</h2>
