--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./chicken.html">Chicken Pot Pie</a>
+    <ul>
+        <li><a href="./chicken.html">Chicken Pot Pie</a></li>
+        <li><a href="./beerglazed.html">Beer Glazed Brat and Sauerkraut</a></li>
+    </ul>
 </body>
 </html>
