--- a/beerglazed.html
+++ b/beerglazed.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Beer Glazed Brats and Sauerkraut</h1>
-    <img src="./images/beer-glazed.jpeg" alt="">
+    <img src="./images/beer-glazed.jpeg" alt="beer glazed brats">
     <p>I came up with this recipe for brats and sauerkraut because simply simmering sausages in beer and onions tasted weak. I was looking for a more intense beer flavor with a little bite, and this is it.</p>
     <p>It's a very satisfying dish if you crave German flavor that's Americanized. We love this dish served on potato rolls with spicy hot German mustard, Swiss cheese, and an ice-cold beer on the side</p>
     <h2>Ingredients</h2>
