--- a/germanpancakes.html
+++ b/germanpancakes.html
@@ -7,5 +7,25 @@
 </head>
 <body>
     <h1>German Potato Pancakes</h1>
+    <img src="./images/germanpancakes.webp" alt="german-pancakes">
+    <p>These German potato pancakes are a nice change from regular pancakes. They make a great dinner meal when served with Bratwurst sausage. I spread mine with cranberry sauce and top with maple syrup.</p>
+     <h2>Ingredients</h2>
+    <ul>
+        <li>1 pound skinless, boneless chicken breast halves - cubed</li>
+        <li>2 large eggs</li>
+        <li>2 tablespoons all-purpose flour</li>
+        <li>¼ teaspoon baking powder</li>
+        <li>½ teaspoon salt</li>
+        <li>¼ teaspoon pepper</li>
+        <li>6 medium potatoes, peeled and shredded</li>
+        <li>½ cup finely chopped onion</li>
+        <li>¼ cup vegetable oil</li>
+    </ul>
+
+ <h2>Steps</h2>
+    <ol>
+    <li>Beat eggs, flour, baking powder, salt, and pepper together in a large bowl; stir in potatoes and onion.</li>
+    <li>Heat oil in a large skillet over medium heat. Drop heaping tablespoonfuls of potato mixture into hot oil in batches. Press to flatten. Cook until browned and crisp, about 3 minutes on each side. Transfer to a paper towel-lined plate to drain. Repeat with remaining potato mixture.</li>
+    </ol>
 </body>
 </html>
