--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="./chicken.html">Chicken Pot Pie</a></li>
         <li><a href="./beerglazed.html">Beer Glazed Brat and Sauerkraut</a></li>
-        <li><a href="./germanpancakes.html"></a></li>
+        <li><a href="./germanpancakes.html">German Potato Pancakes</a></li>
     </ul>
 </body>
 </html>
