--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="./images/chef.gif" alt="Chef">
     <ul>
         <li><a href="./chicken.html">Chicken Pot Pie</a></li>
         <li><a href="./beerglazed.html">Beer Glazed Brat and Sauerkraut</a></li>
