add link to main page and header

--- a/beerglazed.html
+++ b/beerglazed.html
@@ -7,7 +7,8 @@
     <title>Beer Glazed Brats and Sauerkraut</title>
 </head>
 <body>
-    <h1>Beer Glazed Brats and Sauerkraut</h1>
+    <a href="./index.html">Main Page</a>
+    <h1 id="header">Beer Glazed Brats and Sauerkraut</h1>
     <img src="./images/beer-glazed.jpeg" alt="beer glazed brats">
     <p>I came up with this recipe for brats and sauerkraut because simply simmering sausages in beer and onions tasted weak. I was looking for a more intense beer flavor with a little bite, and this is it.</p>
     <p>It's a very satisfying dish if you crave German flavor that's Americanized. We love this dish served on potato rolls with spicy hot German mustard, Swiss cheese, and an ice-cold beer on the side</p>
@@ -32,5 +33,7 @@
     <li>Uncover and increase the heat to medium. Boil the sauce until it reduces to a thick, syrupy liquid, about 20 minutes. Tilt the skillet to roll brats in the sticky sauce until thoroughly coated. Transfer brats to a plate and cover to keep warm.</li>
     <li>Add sauerkraut to the skillet and stir to combine with any leftover sauce; cook for 5 to 8 minutes. Transfer sauerkraut to a serving platter and top with warm brats.</li>
     </ol>
+    <a href="#header">Return to top</a>
+    
 </body>
 </html>
