--- a/chicken.html
+++ b/chicken.html
@@ -7,7 +7,8 @@
     <title>Chicken</title>
 </head>
 <body>
-    <h1>Chicken Pot Pie</h1>
+    <a href="./index.html">Main page</a>
+    <h1 id="header">Chicken Pot Pie</h1>
     <img src="./images/chicken.webp" alt="">
     <h2>A delicious chicken pie made from scratch with carrots, peas, and celery in a pre-made crust. Add thyme and poultry seasoning for more flavor.</h2>
     <p>Every home cook needs a good chicken pot pie recipe in their repertoire. On the hunt for a new family favorite? You're in luck! This homemade chicken pot pie definitely deserves a permanent spot in your recipe box.</p>
@@ -41,5 +42,6 @@
     <li>Bake in the preheated oven until pastry is golden brown and filling is bubbly, 30 to 35 minutes. Cool for 10 minutes before serving.</li>
     <li>Serve immediately and enjoy!</li>
     </ol>
+    <a href="#header">Return to top</a>
 </body>
 </html>
