--- a/germanpancakes.html
+++ b/germanpancakes.html
@@ -7,7 +7,8 @@
     <title>German-potato-pancakes</title>
 </head>
 <body>
-    <h1>German Potato Pancakes</h1>
+    <a href="./index.html">Main page</a>
+    <h1 id="header">German Potato Pancakes</h1>
     <img src="./images/germanpancakes.webp" alt="german-pancakes">
     <p>These German potato pancakes are a nice change from regular pancakes. They make a great dinner meal when served with Bratwurst sausage. I spread mine with cranberry sauce and top with maple syrup.</p>
      <h2>Ingredients</h2>
@@ -28,5 +29,6 @@
     <li>Beat eggs, flour, baking powder, salt, and pepper together in a large bowl; stir in potatoes and onion.</li>
     <li>Heat oil in a large skillet over medium heat. Drop heaping tablespoonfuls of potato mixture into hot oil in batches. Press to flatten. Cook until browned and crisp, about 3 minutes on each side. Transfer to a paper towel-lined plate to drain. Repeat with remaining potato mixture.</li>
     </ol>
+    <a href="#header"></a>
 </body>
 </html>
